dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__send_socket_assembler__cancelled_frame_emitted_when_completion_is_cancelled.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG deriving sealer for credentials credentials=0xf0fd2a0a4d67aaf871aba8165276bbd1:0 peer_addr=10.0.0.1:4433 sender_idx=0
0 [main] TRACE c#test.pending.enq=1
0 [main] TRACE g#test.pending.depth=1
0 [main] TRACE m#test.pending.depth_dist=1
0 [main] TRACE m#asm.max_datagram_size=1472
0 [main] TRACE c#test.pending.drain=1
0 [main] TRACE g#test.pending.depth=0
0 [main] TRACE m#asm.segments=0
0 [main] DEBUG all output assertions passed
0.001 [server] DEBUG server confirmed no packet arrived (timeout as expected)
