dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__send_socket_assembler__sends_encrypted_packet_to_peer.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG deriving sealer for credentials credentials=0xf0fd2a0a4d67aaf871aba8165276bbd1:0 peer_addr=10.0.0.1:4433 sender_idx=0
0 [main] TRACE c#test.pending.enq=1
0 [main] TRACE g#test.pending.depth=1
0 [main] TRACE m#test.pending.depth_dist=1
0 [main] TRACE m#asm.max_datagram_size=1472
0 [main] TRACE c#test.pending.drain=1
0 [main] TRACE g#test.pending.depth=0
0 [main] TRACE c#tx.frame[queue_data]=1
0 [main] TRACE m#tx.packet_size=49
0 [main] TRACE m#tx.frames_per_packet=1
0 [main] TRACE m#tx.payload_size=0
0 [main] TRACE c#tx.data=1
0 [main] TRACE c#tx.data[send.0]=1
0 [main] TRACE c#test.inflight.enq=1
0 [main] TRACE g#test.inflight.depth=1
0 [main] TRACE m#test.inflight.depth_dist=1
0 [main] TRACE m#asm.segments=1
0 [main] DEBUG asserting wheel routing after assembly
0 [main] DEBUG all output assertions passed
0.0005 [server] DEBUG received encrypted datagram at server n=49
